--- a/src/index.html
+++ b/src/index.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="es">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link rel="shortcut icon" href="./assets/img/4geeks.ico" />
-    <script
-      src="https://kit.fontawesome.com/072e5df971.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+    <title> Tarjeta de Perfil </title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/072e5df971.js" crossorigin="anonymous"></script>
+</head>
 
-  <body>
-    <ul class="filters">
-      <li>
+<body>
+<ul class="filters">
+  
+<li>
         <label>Include Cover</label>
         <select class="picker" for="includeCover">
-          <option value="">Include Cover</option>
           <option value="true">True</option>
           <option value="false">False</option>
         </select>
-      </li>
-      <li>
+</li>
+<li>
         <label>Name</label>
-        <input class="picker" for="name" type="text" />
-      </li>
-      <li>
+        <input class="picker" for="name" type="text" placeholder="Nombre" />
+</li>
+      
+<li>
         <label>Last Name</label>
-        <input class="picker" for="lastName" type="text" />
-      </li>
-      <li>
+        <input class="picker" for="lastName" type="text" placeholder="Apellidos" />
+</li>
+      
+<li>
         <label>S.M. Position</label>
         <select class="picker" for="socialMediaPosition">
           <option value="position-left">Left</option>
           <option value="position-right">Right</option>
         </select>
-      </li>
-      <li>
+</li>
+
+<li>
         <label>Twitter</label>
-        <input class="picker" for="twitter" type="text" />
-      </li>
-      <li>
+        <input class="picker" for="twitter" type="text" placeholder="usuario" />
+</li>
+  
+<li>
         <label>Github</label>
-        <input class="picker" for="github" type="text" />
-      </li>
-      <li>
+        <input class="picker" for="github" type="text" placeholder="usuario" />
+</li>
+
+<li>
         <label>LinkedIn</label>
-        <input class="picker" for="linkedin" type="text" />
-      </li>
-      <li>
+        <input class="picker" for="linkedin" type="text" placeholder="usuario" />
+</li>
+
+<li>
         <label>Instagram</label>
-        <input class="picker" for="instagram" type="text" />
-      </li>
-      <li>
-        <label>Role</label>
+        <input class="picker" for="instagram" type="text" placeholder="usuario" />
+</li>
+
+<li>
+  <label>Role</label>
         <select class="picker" for="role">
           <option value="">null</option>
           <option value="Web Developer">Web Developer</option>
           <option value="Floor Planner">Floor Planner</option>
-          <option value="Technical Writter">Technical Writter</option>
+          <option value="Technical Writer">Technical Writer</option>
         </select>
-      </li>
-      <li>
+</li>
+
+<li>
         <label>City</label>
         <select class="picker" for="city">
           <option value="">null</option>
@@ -70,8 +75,9 @@
           <option value="Caracas">Caracas</option>
           <option value="Toronto">Toronto</option>
         </select>
-      </li>
-      <li>
+</li>
+
+<li>
         <label>Country</label>
         <select class="picker" for="country">
           <option value="">null</option>
@@ -80,11 +86,12 @@
           <option value="Canada">Canada</option>
           <option value="Venezuela">Venezuela</option>
         </select>
-      </li>
-    </ul>
+</li>
+</ul>
+
     <div id="widget_content"></div>
 
-    <!-- do not remove this bundle.js tag -->
-    <script type="text/javascript" src="/main.bundle.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
+
